--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Com o combo +, você pode aproveitar o Alura + e o Alura Língua por um preço único</h1>
-    
+<section class="container principal">
+ <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1> 
+ <img src="Combo.png" alt="Combo do Alura +">
+ <a href="https://www.alura.com.br/" class="container__botao">Assine por 12x de R$120,00*</a>
+ <a href="https://www.alura.com.br/" class="container__botao_botao_secundario">Assine somente o Alura+</a>
+</section>  
 </body>
 </html>
