--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alura Plus</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 <section class="container principal">
- <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1> 
+<div>
+ <h1class="container_titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1> 
  <img src="Combo.png" alt="Combo do Alura +">
  <a href="https://www.alura.com.br/" class="container__botao">Assine por 12x de R$120,00*</a>
- <a href="https://www.alura.com.br/" class="container__botao_botao_secundario">Assine somente o Alura+</a>
+ <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
+ <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+</div>
 </section>  
 </body>
 </html>
